--- a/csharp实例/UserLoginDemo/Views/FormSubmit/Create.cshtml
+++ b/csharp实例/UserLoginDemo/Views/FormSubmit/Create.cshtml
@@ -9,7 +9,7 @@
     {
         <p>
             @Html.Label("测试标签")
-            @Html.Editor("测试标记")
+            @Html.TextBox("id","测试标记",)
         </p>
     } }
 
