--- a/csharp实例/UserLoginDemo/Views/GURD/Index.cshtml
+++ b/csharp实例/UserLoginDemo/Views/GURD/Index.cshtml
@@ -187,3 +187,7 @@
 }
 
 </table>
+
+    <div id="pageNav">
+        @Html.ShowPageNavigate((int)ViewData["pageIndex"],(int)ViewData["pageSize"],(int)ViewData["total"]);
+    </div>
